# python-jq

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py
src/python_jq/: __about__.py  __init__.py  download.py  run.py  settings.py
