[metadata]
name = Python-JQ
version = attr: python_jq.__about__.__version__
url = https://github.com/sonnyksimon/python-jq
project_urls =
    Source Code = https://github.com/sonnyksimon/python-jq
    Issue Tracker = https://github.com/sonnyksimon/python-jq/issues
license = MIT
author = Sonny Kothapally
author_email = me@sonnyksimon.com
maintainer = Sonny Kothapally
description = A jq library for Python that just works everywhere.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
package_dir = = src
include_package_data = True
python_requires = >= 3.7
# Dependencies are in setup.py.

[options.packages.find]
where = src

[coverage:run]
source =
    python_jq

[coverage:paths]
source =
    src
    */site-packages